🎨 fix: adjust line-height for better text readability

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,6 +14,7 @@
 .font-open-sans {
 	font-family: "Open Sans", serif;
 	font-optical-sizing: auto;
+	line-height: 130%;
 }
 
 html,
